2009-09-17  Claudio Saavedra  <csaavedra@igalia.com>

	[2.2.0 Release Candidate 7]

	* NEWS: Updates
	* debian/changelog: bump and updates

2009-09-17  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-gtk.c (hildon_gtk_window_take_screenshot):
	Use the Xlib API to take window screenshots, since the GDK API
	doesn't allow us to set the event mask.

	Fixes: NB#138857 (hildon_gtk_window_take_screenshot doesn't take a
	screenshot)

2009-09-14  Claudio Saavedra  <csaavedra@igalia.com>

	[2.2.0 Release Candidate 6]

	* debian/changelog: bump and updates.

2009-09-14  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-window.c: (hildon_window_update_menu_flag): Properly
	free a GList and avoid potential memory corruption.

2009-09-11  Claudio Saavedra  <csaavedra@igalia.com>

	[2.2.0 Release Candidate 5]

	* NEWS: Updates
	* debian/changelog: bump and updates

2009-09-11  Claudio Saavedra  <csaavedra@igalia.com>

	Do not set any flag for empty legacy menus

	* hildon/hildon-program.c: (hildon_program_set_common_menu):
	* hildon/hildon-window.c: (hildon_window_update_menu_flag):
	This will probably not work fine with empty legacy menus added to
	programs or windows and populated later, but so it's life.

2009-09-10  Claudio Saavedra  <csaavedra@igalia.com>

	Update the application menu flag for application-wise windows

	* hildon/hildon-program.c: (+hildon_program_on_common_app_menu_changed),
	(hildon_program_set_common_app_menu): Also take into account the visibility
	of its items.

2009-09-10  Claudio Saavedra  <csaavedra@igalia.com>

	Emit HildonAppMenu::changed when menu items change visibility

	* hildon/hildon-app-menu.c: (item_visibility_changed),
	(filter_visibility_changed): Also emit ::changed on
	visibility of items changed.

2009-09-10  Claudio Saavedra  <csaavedra@igalia.com>

	Do not set the menu flag in a window when a menu is empty

	* hildon/hildon-window.c: (hildon_window_update_menu_flag),